<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/file_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_xLarge"
        android:text="@string/file_name_details"
        android:textColor="@color/dark_color"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:maxLines="3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name_id"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/file_name_details" />

    <TextView
        android:id="@+id/status_name_deitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_status"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/dark_color"
        app:layout_constraintBottom_toTopOf="@+id/motion_base"
        app:layout_constraintEnd_toEndOf="@+id/file_name_id"
        app:layout_constraintStart_toStartOf="@+id/file_name_id"
        app:layout_constraintTop_toBottomOf="@+id/file_name_id" />

    <TextView
        android:id="@+id/status_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/status_name_deitals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_name_deitals"
        tools:text="@string/file_name_status" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_base"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layoutDescription="@xml/details_motion_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/button_ok_details"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>


</androidx.constraintlayout.widget.ConstraintLayout>